<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:background="@drawable/hua"
    android:layout_height="match_parent">

    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/absoluteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="0dp"
            android:layout_y="0dp"
            android:background="@drawable/machao"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_x="80dp"
            android:layout_y="0dp"
            android:background="@drawable/caocao"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="240dp"
            android:layout_y="0dp"
            android:background="@drawable/zhaoyun"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="0dp"
            android:layout_y="160dp"
            android:background="@drawable/huangzhong"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_x="80dp"
            android:layout_y="160dp"
            android:background="@drawable/guanyu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="240dp"
            android:layout_y="160dp"
            android:background="@drawable/zhangfei"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="80dp"
            android:layout_y="240dp"
            android:background="@drawable/zu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="160dp"
            android:layout_y="240dp"
            android:background="@drawable/zu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="0dp"
            android:layout_y="320dp"
            android:background="@drawable/zu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="240dp"
            android:layout_y="320dp"
            android:background="@drawable/zu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </AbsoluteLayout>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ConstraintLayout-inner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/ConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/absoluteLayout">

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gradient"
            android:onClick="toHome"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gradient"
            android:onClick="back"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newGame"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gradient"
            android:onClick="newGame"
            android:text="@string/newGame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/next"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gradient"
            android:onClick="next"
            android:text="下一关"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>